@@ -1,3 +1,6 @@
+9 November 2010: Wouter
+	- unbound-anchor compiles with openssl 0.9.7.
+
 8 November 2010: Wouter
 	- release tag 1.4.7.
 	- trunk is version 1.4.8.
